--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,10 +29,15 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   cupertino_icons: ^1.0.8
+  dio: ^5.8.0+1
   flutter:
     sdk: flutter
   flutter_svg: ^2.0.17
+  go_router: ^14.8.1
   google_fonts: ^6.2.1
+  hugeicons: ^0.0.7
+  json_rest_server: ^3.2.1
+  provider: ^6.1.2
 
 dev_dependencies:
   flutter_lints: ^5.0.0
@@ -50,6 +55,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets\images\splash_image.svg
+    - assets\images\last_read_home.svg
   #   - images/a_dot_ham.jpeg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
