feat: Add Surah Detail Screen and API integration
- Introduced SurahDetailScreen to display details of a selected Surah.
- Updated routing in app.dart to navigate to SurahDetailScreen.
- Enhanced ApiClient to connect to the Quran API with improved error handling.
- Implemented QuranService methods to fetch Surah details and handle API responses.
- Added SurahDetailsList and SurahDetailsListItem widgets for displaying verses.
- Updated HomeScreen to improve UI and integrate last read functionality.
- Added detail_screen_banner.svg for visual enhancement in SurahDetailScreen.
- Updated theme constants for new text styles in SurahDetailScreen.
- Improved error handling and loading states in various widgets.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,7 @@ flutter:
   assets:
     - assets\images\splash_image.svg
     - assets\images\last_read_home.svg
+    - assets\images\detail_screen_banner.svg
   #   - images/a_dot_ham.jpeg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
